Moved social logins to data and fixed alignment issues

--- a/_sass/homepage.scss
+++ b/_sass/homepage.scss
@@ -61,3 +61,8 @@ body {
     font-size: 30px;
     color: rgba(21, 20, 20, 0.7)
 }
+
+.text-align-justify {
+    text-align: justify;
+    text-justify: inter-word;
+}
